--- a/index.html
+++ b/index.html
@@ -38,12 +38,44 @@
               <a href="#" class="menu__link">Contact Us</a>
             </li>
           </ul>
+
+          <div class="nav-menu">
+            <ul class="mobile-menu">
+              <li class="mobile-menu__item">
+                <a href="#" class="mobile-menu__link">Home</a>
+              </li>
+              <li class="mobile-menu__item">
+                <a href="#" class="mobile-menu__link">Destination</a>
+              </li>
+              <li class="mobile-menu__item">
+                <a href="#" class="mobile-menu__link">Near Me</a>
+              </li>
+              <li class="mobile-menu__item">
+                <a href="#" class="mobile-menu__link">Events</a>
+              </li>
+              <li class="mobile-menu__item">
+                <a href="#" class="mobile-menu__link">Blog</a>
+              </li>
+              <li class="mobile-menu__item">
+                <a href="#" class="mobile-menu__link">Gallery</a>
+              </li>
+              <li class="mobile-menu__item">
+                <a href="#" class="mobile-menu__link">About</a>
+              </li>
+              <li class="mobile-menu__item">
+                <a href="#" class="mobile-menu__link">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+
           <div class="header__links">
             <a href="#" class="header__link">Singn up</a
-            ><a href="#" class="header__link">Sign in</a>
+            ><a href="#" class="header__link header__link--border">Sign in</a>
+          </div>
+          <div class="nav__btn">
+            <span class="nav__btn-line"> </span>
           </div>
         </nav>
-        
       </div>
     </header>
 
