--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
                 <a href="#" class="mobile-menu__link">Contact Us</a>
               </li>
             </ul>
+            <div class="nav-menu__links">
+              <a href="#" class="nav-menu__link">Singn up</a
+              ><a href="#" class="nav-menu__link nav-menu__link--border">Sign in</a>
+            </div>
           </div>
 
           <div class="header__links">
@@ -73,7 +77,7 @@
             ><a href="#" class="header__link header__link--border">Sign in</a>
           </div>
           <div class="nav__btn">
-            <span class="nav__btn-line"> </span>
+            <span class="nav__btn-line"></span>
           </div>
         </nav>
       </div>
